[package]
name = "graphics"
version = "0.1.0"
edition = "2018"
authors = ["Georgiy Glinskikh <georgiyglinskikh@gmail.com>"]
description = "Cli app to process image files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
clap = "*"

[profile.release]
opt-level = 3
debug = 0
lto = true